# dogwatch

./: Cargo.toml  LICENSE  README.md  dogwatch.spec
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: dogwatch_test.rs
