[package]
name = "dogwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dbus = "0.9.6"
signal-hook = "0.3.14"
