[package]
name = "dogwatch"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Prevent your computer from sleeping using dbus"
readme = "README.md"
repository = "https://github.com/Radical-Egg/dogwatch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }

[target. 'cfg(unix)'.dependencies]
dbus = "0.9.6"
signal-hook = "0.3.14"
crossbeam-utils = "0.8.11"

[target. 'cfg(windows)'.dependencies]
windows = "0.58.0"
signal-hook = "0.3.16"
ctrlc = "3.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Power",
]

[package.metadata.generate-rpm]
release = "1"
assets = [
    { source = "target/release/dogwatch", dest = "/usr/bin/dogwatch", mode = "0755"},
    { source = "LICENSE", dest = "/usr/share/doc/dogwatch/LICENSE", mode = "0644"},
    { source = "README.md", dest = "/usr/share/doc/dogwatch/README", mode = "0644"}
]

[[bin]]
name = "dogwatch"
path = "src/main.rs"

[lib]
name = "dogwatch"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
